--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -92,23 +92,22 @@
   transition: color 0.15s ease, border-color 0.15s ease;
 }
 
-
-@media (min-width: 960px ) {
+@media (min-width: 960px) {
   .card {
     flex-basis: calc(33.33% - 2rem);
   }
 }
 
 .card:hover img {
-  box-shadow: 0 2px 12px rgba(0,0,0,.1);
+  box-shadow: 0 2px 12px rgba(0, 0, 0, 0.1);
 }
 
 .card img {
   display: block;
   max-width: 100%;
-  padding: .5em;
-  border-radius: .5em;
-  margin: 0 -.5em 1em;
+  padding: 0.5em;
+  border-radius: 0.5em;
+  margin: 0 -0.5em 1em;
 }
 
 .card h3 {
@@ -124,6 +123,19 @@
 
 .logo {
   height: 1em;
+}
+
+.button {
+  color: white;
+  font-family: inherit;
+  font-size: 0.9em;
+  font-weight: 700;
+  background-color: blueviolet;
+  padding: 0.8em 1.4em;
+  border-radius: 0.2em;
+  border: 0;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.4);
+  cursor: pointer;
 }
 
 @media (max-width: 600px) {
